tests/NormalTests/paczka1/small_fuzzy/92759582.err
Error in line 2: iLHSWTVJX7 S385 99,7
Error in line 1: T8woJ A387 71,8
Error in line 7: T8woJ A833 97,8
